2009-02-25  Matevz Tadel  <matevz.tadel@ijs.si>

	Fix issues with MIR function-argument serialization.

	* libexec/project7.pl:
	Stream TObject-type arguments via TObject::Write/ReadObjectAny()
	instead of calling Streamer() directly. This is particularly
	important for pointers and references which are polymorphic.

	Fix a gcc-3.4 warning in generated code.

2009-02-23  Matevz Tadel  <matevz.tadel@ijs.si>

	Improving install stuff.

	* Makefile:
	Install demos/ recursively when doing install and blob_install.

	* libexec/gled_install_files.pl:
	Fix wrong usage info.

	* perllib/Gled_Installer.pm:
	Fix a couple of bugs.

2009-02-23  Matevz Tadel  <matevz.tadel@ijs.si>

	Add gled_config_writer.pl script. Minor changes.

	* libexec/gled_config_writer.pl:
	New helper - write gled-config script.

	* Makefile:
	Use gled_config_writer to create gled-config on install and
	blob_install. This way gled-config is tailored to install type.

	* bin/gled-config.in:
	Reincarnate as shell-script.

	* configure:
	Use gled_config_writer to create gled-config for build.

	* libexec/project7.pl:
	Use 'eq' instead of '==' when comparing typeglobs.

2009-02-08  Matevz Tadel  <matevz.tadel@ijs.si>

	* bin/gled-config.in:
	* configure:
	* configure.rc:
	* libexec/project7.pl:
	Beautify code.

2009-02-03  Matevz Tadel  <matevz.tadel@ijs.si>

	* include/gled-gcc-config.h:
	Silence the gcc-4.3 warnings about usage of hash_map.
	This needs to be fixed properly at some point.

2008-12-24  Matevz Tadel  <matevz.tadel@ijs.si>

	* libexec/gled_install.pl:
	* libexec/gled_uninstall.pl:
	New scripts for installation of individual files.

	* Makefile:
	Install also top-level stuff for install and blob-install
	targets. As it turns out there are only two files to install:
	gled-config and ParseConfig.pl.

	Add some variable definitions from make_defs.inc - should really
	have a common source for those.

	* configure:
	Remove unnecessary use statement.

	* make/make_defs.inc: