@@ -7,23 +7,16 @@ set dir = `pwd`
 setenv ROOTSYS ${dir}/external/root
 setenv GLEDSYS ${dir}
 
-# External
-setenv PATH ${PATH}:${dir}/external/bin
+setenv PATH ${GLEDSYS}/bin:${ROOTSYS}/bin:${dir}/external/bin:${PATH}
+
 if ( $?LD_LIBRARY_PATH ) then
-  setenv LD_LIBRARY_PATH ${LD_LIBRARY_PATH}:${dir}/external/lib
+  setenv LD_LIBRARY_PATH ${GLEDSYS}/lib:${ROOTSYS}/lib:${dir}/external/lib:${LD_LIBRARY_PATH}
 else
-  setenv LD_LIBRARY_PATH ${dir}/external/lib
+  setenv LD_LIBRARY_PATH ${GLEDSYS}/lib:${ROOTSYS}/lib:${dir}/external/lib
 endif
+
 if ( $?MANPATH ) then 
-  setenv MANPATH ${MANPATH}:${dir}/external/man
+  setenv MANPATH ${dir}/external/man:${MANPATH}
 else
   setenv MANPATH ${dir}/external/man
 endif
-
-# ROOT
-setenv PATH ${PATH}:${ROOTSYS}/bin
-setenv LD_LIBRARY_PATH ${LD_LIBRARY_PATH}:${ROOTSYS}/lib
-
-# Gled
-setenv PATH ${PATH}:${GLEDSYS}/bin
-setenv LD_LIBRARY_PATH ${LD_LIBRARY_PATH}:${GLEDSYS}/lib
